<?xml version="1.0"?>
<package>
  <name>qpoases_catkin</name>
  <version>3.2.0</version>
  <description>This package provides a wrapper around the Humanoid Path Planner pkg-config-modified version of the qpOASES package.</description>
  <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/wxmerkt/qpOASES_catkin</url>
  <url type="bugtracker">https://github.com/wxmerkt/qpOASES_catkin/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export/>
</package>
